--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GrainBrain Plotter 🧠</title>
+    <title>GrainBrain Plotter 🌾🧠📈</title>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
     <style>
@@ -20,7 +20,7 @@
 </head>
 <body>
 
-    <h1>GrainBrain Plotter 🧠📈</h1>
+    <h1>GrainBrain Plotter 🌾🧠📈</h1>
 
     <div id="drop-zone">Drag & Drop your CSV or TXT Log File Here</div>
 
